--- a/RJBS.bundle/Contents/Info.plist
+++ b/RJBS.bundle/Contents/Info.plist
@@ -12,6 +12,8 @@
 	<dict>
 		<key>TICapsLockLanguageSwitchCapable</key>
 		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>com.apple.keyboardlayout.rjbs.rjbs</string>
 		<key>TISIntendedLanguage</key>
